# dfzf

./: .bumpversion.cfg  .bumversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  dfzf-launcher  dfzf-notifs-load  dfzf-windows  dfzf-windows-load  makefile  mise.toml
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: build.yaml
dfzf-daemon/: Cargo.toml
dfzf-daemon/src/: .main.rs.swp  main.rs
dfzf-utils/: Cargo.toml
src/: main.rs
