[package]
name = "dfzf-daemon"
version = "0.3.2"
edition = "2021"
description = "An i3/Sway utility to keep track of windows visit history."
repository = "https://github.com/parisni/dfzf-daemon"
homepage = "https://github.com/parisni/dfzf-daemon"
license = "MIT"
keywords = ["i3", "sway"]
authors = ["Charles Crete <charles@cretezy.com>", "Nicolas Paris <contact@parisni.com>"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
i3ipc = { version = "0.10.1", features = ["i3-4-14"] }
chrono = "0.4"

[profile.release]
strip = true
