[package]
name = "dfzf-utils"
version = "1.0.0"
edition = "2021"
description = "An i3/Sway utility to keep track of windows visit history."
repository = "https://github.com/parisni/dfzf"
homepage = "https://github.com/parisni/dfzf"
license = "MIT"
keywords = ["i3", "sway"]
authors = ["Charles Crete <charles@cretezy.com>", "Nicolas Paris <contact@parisni.com>"]

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
i3ipc = { git = "https://github.com/brownjohnf/i3ipc-rs", rev="1512dc6ec92c87b604b1b1a0ce01ad87aa17bb86", features = ["i3-4-18-1"] }
chrono = "0.4"

[profile.release]
strip = true

[[bin]]
name = "dfzf-mark"

[[bin]]
name = "dfzf-daemon"
